--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation code here
+#navigation {
+
+    background-color: @wild-sand;
+    width: 100%;
+    text-align: center;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-bottom: 2px solid @sea-shell;;
+    align-items: center;
+    
+    h1 {
+        font-size: 4rem;
+        color: @river-bend;
+    }
+    nav {
+        display: flex;
+        justify-content: space-between;
+        width: 25%;
+        a {
+            font-size: 1.8rem;
+            color: @river-bend;
+            text-decoration: none;
+        }
+    }
+    
+}
