--- a/css/index.css
+++ b/css/index.css
@@ -195,6 +195,11 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .home {
+    background-color: red;
+  }
+}
 .home .intro img {
   border-radius: 5px;
 }
@@ -239,6 +244,20 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  background-color: #22283A;
+  font-size: 2em;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  height: 35px;
+  line-height: 35px;
+  width: 100px;
+}
+.home .walk .walk-text .btn:hover {
+  color: #22283A;
+  background-color: white;
 }
 .home .walk .walk-img {
   width: 46%;
