--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,7 @@
     width: 100%;
     text-align: center;
     height: 100px;
-    display: flex;
+    .flex();
     flex-direction: column;
     justify-content: space-around;
     border-bottom: 2px solid @sea-shell;;
@@ -13,15 +13,15 @@
     
     h1 {
         font-size: 4rem;
-        color: @river-bend;
+        .navfont();
     }
     nav {
-        display: flex;
+        .flex();
         justify-content: space-between;
         width: 25%;
         a {
             font-size: 1.8rem;
-            color: @river-bend;
+            .navfont();
             text-decoration: none;
         }
     }
