edited mobile view, completed MVP

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,6 +19,9 @@
         .flex();
         justify-content: space-between;
         width: 25%;
+        @media @mobile {
+            width: 75%;
+        }
         a {
             font-size: 1.8rem;
             .navfont();
