--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,12 +1,13 @@
 // Home Content
 
 .home {
-  @media @mobile {
-    background-color: red;
-  }
+ 
   .intro {
     img {
       border-radius: 5px;
+      @media @mobile {
+        width: 100%;
+      }
     }
     h2 {
       padding: 15px;
@@ -18,16 +19,31 @@
   
   }
 
+  
   .space-images {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    @media @mobile {
+    
+      width: 100%;
+      
+      .sky,.launch{
+        display: none;
+      }
+    }
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @mobile {
+        width: 100%;
+        .sky,.launch{
+          display: none;
+        }
+      }
     }
   }
 
@@ -49,9 +65,18 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @mobile {
+      flex-direction: column-reverse;
+      padding:15px;
+      
+    }
 
     .walk-text {
       width: 50%;
+      @media @mobile {
+        width: 100%;
+        
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -69,6 +94,11 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @mobile {
+        margin-left: 0;
+        width: 100%;
+        margin: 20px 0;
+        }
       
       img {
         width: 100%;
