--- a/css/index.css
+++ b/css/index.css
@@ -293,6 +293,13 @@ footer {
   color: #22283A;
   background-color: white;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    height: 70px;
+    line-height: 70px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
