--- a/less/mixins.less
+++ b/less/mixins.less
@@ -21,4 +21,9 @@
         color: @color;
         background-color: white;
     }
+    @media @mobile {
+        width: 100%;
+        height: 70px;
+        line-height: 70px;
+    }
 }
